k8s/base/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: flight-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/halitdincer/flight-tracker-api:latest
          imagePullPolicy: Always
          command: ["bundle", "exec", "sidekiq", "-C", "config/sidekiq.yml"]
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
